--- a/MedicalAnimal/AnimalCardsWindow.xaml
+++ b/MedicalAnimal/AnimalCardsWindow.xaml
@@ -11,7 +11,7 @@
         Title="AnimalCardsWindow" Height="450" Width="800"
         DataContext="{Binding ElementName=AnimalCardsWindowName, Path=.}">
     <Grid>
-        <DataGrid x:Name="AnimalCardsGrid" ItemsSource="{Binding AnimalCards}" RowEditEnding="OnEditEnding" AutoGenerateColumns="False">
+        <DataGrid x:Name="AnimalCardsGrid" ItemsSource="{Binding AnimalCards}" RowEditEnding="OnEditEnding" AutoGenerateColumns="False" PreviewKeyDown="OnKeyDown">
  
             <DataGrid.Columns>
                 <DataGridTextColumn Header="#" Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}"/>
