--- a/MedicalAnimal/MainWindow.xaml
+++ b/MedicalAnimal/MainWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:local="clr-namespace:MedicalAnimal"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="177,156,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+    <Frame x:Name="Frame" Content="Frame">
+    </Frame>
 
-    </Grid>
 </Window>
