--- a/MedicalAnimal/ContractCardsWindow.xaml
+++ b/MedicalAnimal/ContractCardsWindow.xaml
@@ -10,7 +10,12 @@
         x:Name="ContractCardsWindowName"
         Title="ContractCardsWindow" Height="450" Width="800"
         DataContext="{Binding ElementName=ContractCardsWindowName, Path=.}">
-    <Grid>
+    <StackPanel>
+        <ToolBar>
+            <Button Content="Отчет" Click="OnReport">
+
+            </Button>
+        </ToolBar>
         <DataGrid x:Name="ContractCardsGrid" ItemsSource="{Binding ContractCards}" RowEditEnding="OnEditEnding" AutoGenerateColumns="False" PreviewKeyDown="OnKeyDown">
  
             <DataGrid.Columns>
@@ -45,5 +50,5 @@
                 <DataGridTextColumn Header="Испольнитель" Binding="{Binding Executor, UpdateSourceTrigger=PropertyChanged}"/>
             </DataGrid.Columns>
         </DataGrid>
-    </Grid>
+    </StackPanel>
 </Page>
