--- a/MedicalAnimal/ContractCardsWindow.xaml
+++ b/MedicalAnimal/ContractCardsWindow.xaml
@@ -13,9 +13,22 @@
     <StackPanel>
         <ToolBar>
             <Button Content="Отчет" Click="OnReport">
-
             </Button>
         </ToolBar>
+        <Expander Header="Показать фильтр">
+            <StackPanel>
+                <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
+                    <TextBlock Margin="50,0,50,0">Цена</TextBlock>
+                    <TextBox MinWidth="150" x:Name="TextBoxPriceMin"/>
+                    <TextBlock>-</TextBlock>
+                    <TextBox MinWidth="150" x:Name="TextBoxPriceMax"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,20,0,20">
+                    <Button Content="Очистить" Click="OnResetFilter" Margin="50,0,50,0"/>
+                    <Button Content="Показать" Click="OnFilter" Margin="0,0,50,0"/>
+                </StackPanel>
+            </StackPanel>
+        </Expander>
         <DataGrid x:Name="ContractCardsGrid" ItemsSource="{Binding ContractCards}" RowEditEnding="OnEditEnding" AutoGenerateColumns="False" PreviewKeyDown="OnKeyDown">
             <DataGrid.RowValidationRules>
                 <local:ContractCardValidationRule ValidationStep="UpdatedValue"/>
