--- a/MedicalAnimal/OrganizationCardsWindow.xaml
+++ b/MedicalAnimal/OrganizationCardsWindow.xaml
@@ -17,6 +17,18 @@
 
             </Button>
         </ToolBar>
+        <Expander Header="Показать фильтр">
+            <StackPanel>
+                <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
+                    <TextBlock Margin="50,0,50,0">Тип организации</TextBlock>
+                    <TextBox MinWidth="150" x:Name="TextBoxOrganizationType"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,20,0,20">
+                    <Button Content="Очистить" Click="OnResetFilter" Margin="50,0,50,0"/>
+                    <Button Content="Показать" Click="OnFilter" Margin="0,0,50,0"/>
+                </StackPanel>
+            </StackPanel>
+        </Expander>
         <DataGrid x:Name="OrganizationCardsGrid" ItemsSource="{Binding OrganizationCards}" RowEditEnding="OnEditEnding" AutoGenerateColumns="False" PreviewKeyDown="OnKeyDown">
 
             <DataGrid.RowValidationRules>
